# vllm-mlx

./: .gitignore  .pre-commit-config.yaml  README.es.md  README.fr.md  README.md  README.zh.md  pyproject.toml  tier1b_benchmark.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_model_request.yml  performance_issue.yml
.github/workflows/: ci.yml
benchmarks/: bench_reasoning_parser.py
docs/: gemma4-tool-calling-research.md  index.md
docs/benchmarks/: README.md  audio.md  image.md  llm.md  video.md
docs/development/: architecture.md  contributing.md
docs/es/: index.md
docs/fr/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: audio.md  client-compatibility.md  continuous-batching.md  embeddings.md  mcp-tools.md  model-profile-matrix.md  model-registry.md  moe-top-k.md  multimodal.md  reasoning.md  server.md  tool-calling.md  warm-prompts.md
docs/reference/: cli.md  configuration.md  models.md
docs/research/: performance-optimization-research.md
docs/zh/: index.md
examples/: bench_serve_workload.json  benchmark_audio.py  demo_curl_image.sh  demo_curl_text.sh  demo_curl_video.sh  demo_openai_image.py  demo_openai_text.py  demo_openai_video.py  mcp_tool_use.py  test_openai_compatibility.py
scripts/: TURBOQUANT.md  add_mtp_weights.py  add_mtp_weights_qwen35.py  add_mtp_weights_step3p5.py  batch_invariance_harness.py  minimax_m2_convert.py  modeling_step3p5_mtp.py  prefix_reuse_harness.py  serve_client_profile.sh  serve_profile.sh  serve_profile_benchmark.py  streaming_latency_harness.py  turboquant_quantize.py  turboquant_rotations.py
tests/: conftest.py  golden_prompts.py  smoke_test_specdec.py  test_admission.py  test_anthropic_adapter.py  test_anthropic_models.py  test_anthropic_stream_scrubber.py  test_api_models.py  test_api_utils.py  test_async_markers.py  test_audio.py  test_audio_limits.py  test_batch_quantized_kv_cache.py  test_batched_engine.py  test_batched_engine_mllm_config.py  test_batched_engine_text_scheduler.py  test_batched_mtp_routing.py  test_batching.py  test_batching_deterministic.py  test_bench_compile.py  test_bench_serve.py  test_bench_serve_workload_hardening.py  test_chat_template_kwargs.py  test_chunked_prefill_compat.py  test_cli.py  test_cli_args.py  test_collect_eos_token_ids.py  test_compile.py  test_constrained_decoding.py  test_continuous_batching.py  test_cooperative_specprefill.py  test_dependency_floors.py  test_download.py  test_embeddings.py  test_endpoint_model_policies.py  test_engine_core_idle_polling.py  test_engine_core_stream_safety.py  test_engine_core_thread_streams.py  test_event_loop.py  test_gated_delta_bf16_patch.py  (+96 more)
vllm_mlx/: __init__.py  admission.py  attention.py  audio_limits.py  bench_serve.py  benchmark.py  cli.py  cli_arg_types.py  cli_args.py  cloud_router.py  compile.py  cooperative_specprefill.py  embedding.py  endpoint_model_policies.py  engine_core.py  gradio_app.py  gradio_text_app.py  guided_decoding.py  json_logits_processor.py  lifecycle.py  memory_cache.py  message_utils.py  metrics.py  mllm_batch_generator.py  mllm_cache.py  mllm_scheduler.py  mlx_streams.py  mlx_thread.py  model_registry.py  model_runner.py  model_workflow.py  multimodal_processor.py  optimizations.py  output_collector.py  paged_cache.py  plugin.py  prefix_cache.py  prompt_warmup.py  repetition_detector.py  request.py  (+11 more)
vllm_mlx/api/: __init__.py  anthropic_adapter.py  anthropic_models.py  guided.py  harmony_tools.py  models.py  prompt_canonicalize.py  responses_models.py  streaming.py  tool_calling.py  tool_logits.py  utils.py
vllm_mlx/audio/: processor.py  stt.py  tts.py
vllm_mlx/bench_serve_prompts/: long.json  medium.json  short.json  thinking.json  warm_prompts_example.json
vllm_mlx/constrained/: __init__.py  cache.py  json_schema_processor.py  thinking_processor.py
vllm_mlx/engine/: __init__.py  base.py  batched.py  chat_template_safety.py  hybrid.py  simple.py
vllm_mlx/mcp/: client.py  config.py  executor.py  manager.py  security.py  (+2 more)
(+130 files in other folders)
